# die-roller

./: .gitignore  CMakeLists.txt  README.md
resources/: d10.xpm  d100.xpm  d12.xpm  d20.xpm  d4.xpm  d6.xpm  d8.xpm  icon.xpm
source/: main-window.cpp  main-window.h  main.cpp
